# dmoj-submit

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: api.rs  cli.rs  config.rs  main.rs  subcommands.rs
vhs-tapes/: README.md  submit.tape
