[package]
name = "dmoj-submit"
version = "0.1.0"
authors = ["Nils Emmenegger", "Sava Glavan"]
license = "MIT"
description = "A CLI tool for submitting to DMOJ."
homepage = "https://github.com/nils-emmenegger/dmoj-submit"
repository = "https://github.com/nils-emmenegger/dmoj-submit"
keywords = ["cli", "dmoj"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
confy = "0.5.1"
