[package]
name = "dmoj-submit"
version = "1.0.0"
authors = ["Nils Emmenegger", "Sava Glavan"]
license = "MIT"
description = "A CLI tool for submitting to DMOJ."
homepage = "https://github.com/nils-emmenegger/dmoj-submit"
repository = "https://github.com/nils-emmenegger/dmoj-submit"
keywords = ["cli", "dmoj"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
colored = "2.0.0"
confy = { version = "0.5.1", features = ["toml_conf"] }
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
